fix getByZipOrCity